// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateItemStackGallery generates gallery with stack variants 1`] = `
"

==Gallery==
<gallery captionalign=\\"center\\", widths=\\"120\\">
File:Test Item 1 detail.png|1 Test Item
File:Test Item 3 detail.png|3 Test Item
File:Test Item 5 detail.png|5 Test Item
</gallery>
"
`;

exports[`generateItemStackGallery handles empty stackVariantItems 1`] = `""`;

exports[`generateItemStackGallery skips stackVariantItems with id 0 1`] = `
"

==Gallery==
<gallery captionalign=\\"center\\", widths=\\"120\\">
File:Test Item 1 detail.png|1 Test Item
File:Test Item 2 detail.png|2 Test Item
</gallery>
"
`;
